deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stube
  labels:
    app.kubernetes.io/part-of: stube
